<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".ProfileEditActivity">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userimg"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/userimg" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/camera"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_gravity="bottom"
                android:padding="5dp"

                android:src="@drawable/ic_camera" />

        </FrameLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/verified_name"
            android:textSize="10sp"
            android:textStyle="normal"
            tools:ignore="SmallSp" />

        <EditText
            android:id="@+id/etfullname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sabin_simkhada"
            android:textSize="20sp"
            android:textStyle="bold|normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textSize="10sp"
            android:textStyle="normal"
            tools:ignore="SmallSp" />

        <EditText
            android:id="@+id/etphonenumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_9852051425"
            android:textSize="20sp"
            android:textStyle="bold|normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="10sp"
            android:textStyle="normal"
            tools:ignore="SmallSp" />

        <EditText
            android:id="@+id/etaddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sankhuwasabha"
            android:textSize="20sp"
            android:textStyle="bold|normal" />


        <Button
            android:id="@+id/btnSave"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:text="SAVE"
            android:textSize="20dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/deactive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            app:cardElevation="6dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="10dp"
                android:padding="15dp"
                android:paddingEnd="10dp"
                android:paddingBottom="25dp">

                <TextView

                    android:id="@+id/tvdeactive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:text="Deactive Account"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_logout"
                    app:drawableTint="@color/black" />


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_next"
                    app:tint="@color/black"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/todo" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</LinearLayout>

