...
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/phonenumbertxt"
            android:hint="Phone Number"
            android:transitionName="edit_trans"
            android:layout_marginTop="5dp"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"

...
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/passwordtxt"
            android:hint="Password"
            android:transitionName="edit_trans"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etpassword"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
...

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="10dp"
            android:id="@+id/btnlogin"
            android:clickable="true"
            android:transitionName="btn_trans"
            android:src="@drawable/arrow" />


    </LinearLayout>
...
