<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/uploadGallery"
        android:title="Browse Gallery"
        app:showAsAction="never" />
    <item
        android:id="@+id/uploadCamera"
        android:title="Open Camera"
        app:showAsAction="never" />
</menu>