...

                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/editprofile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    app:cardElevation="6dp">

                    <RelativeLayout
...
