<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#fff"
    android:paddingTop="5dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/imagel"
        android:layout_width="228dp"
        android:layout_height="170dp"
        android:src="@drawable/logo"
        android:transitionName="logo_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="serif-monospace"
        android:textStyle="bold"
        android:text="Hello!"
        android:id="@+id/hello"
        android:transitionName="logo_text"
        android:textColor="#0E7ED8"
        android:textSize="40sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:text="Sign up to get started !!! "
        android:textStyle="bold"
        android:id="@+id/welcome"
        android:transitionName="logo_desc"
        android:textColor="#0E7ED8"
        android:textSize="20sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:orientation="vertical">
<!--        <com.google.android.material.textview.MaterialTextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:id="@+id/ptext"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="1dp"-->
<!--            android:text="Phone Number"-->
<!--            android:textColor="#0E7ED8"-->
<!--            android:textStyle="bold"-->
<!--            ></com.google.android.material.textview.MaterialTextView>-->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/pnumtext"
            android:hint="Phone Number"
            android:layout_marginTop="5dp"
            android:transitionName="edit_trans"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/phonenumber"
                android:inputType="number"

                />
        </com.google.android.material.textfield.TextInputLayout>




<!--        <com.google.android.material.textview.MaterialTextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:id="@+id/nametext"-->
<!--            android:text="Full Name"-->
<!--            android:textColor="#0E7ED8"-->
<!--            android:textStyle="bold"-->
<!--            ></com.google.android.material.textview.MaterialTextView>-->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/fnametext"
            android:hint="Full Name"
            android:transitionName="edit_trans"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fullname"

                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>
<!--        <com.google.android.material.textview.MaterialTextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textColor="#0E7ED8"-->
<!--            android:textStyle="bold"-->
<!--            android:id="@+id/adds"-->
<!--            android:text="Address"-->
<!--            ></com.google.android.material.textview.MaterialTextView>-->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/addtext"
            android:hint="Address"
            android:transitionName="edit_trans"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/address"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

<!--        <com.google.android.material.textview.MaterialTextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textColor="#0E7ED8"-->
<!--            android:textStyle="bold"-->
<!--            android:id="@+id/mainpwd"-->
<!--            android:text="Password"-->
<!--            ></com.google.android.material.textview.MaterialTextView>-->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="1dp"
            android:id="@+id/pwd"
            android:hint="Password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:transitionName="edit_trans"
            app:passwordToggleEnabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
<!--        <com.google.android.material.textview.MaterialTextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->

<!--            android:textColor="#0E7ED8"-->
<!--            android:id="@+id/cpass"-->
<!--            android:textStyle="bold"-->
<!--            android:text="Confirm Password"-->
<!--            ></com.google.android.material.textview.MaterialTextView>-->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/passcon"
            android:hint="Confirm Password"
            android:transitionName="edit_trans"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:passwordToggleEnabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/confirmpassword"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColor="#0E7ED8"
        android:fontFamily="monospace"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="Sign Up"
        ></com.google.android.material.textview.MaterialTextView>

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/arrow"
        android:clickable="true"
        android:id="@+id/register"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="140dp"
        android:transitionName="btn_trans"
        />


</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="Already have an account ? "
            android:textStyle="bold"
            android:id="@+id/already"
            android:transitionName="already"
            android:textColor="#000"
            android:gravity="center_horizontal" />
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/login"
            android:text="@string/Login_string"
            android:textColor="#0E7ED8"
            android:textStyle="bold"
            android:clickable="true"

            android:gravity="center_horizontal" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:id="@+id/textothers"
        android:text="By continuing, you agree to accept our"
        android:textColor="#0E7ED8"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/terms"
        android:textColor="#0E7ED8"
        android:textStyle="bold"
        android:clickable="true"
        android:gravity="center_horizontal" />




</LinearLayout>