...

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:text="Register as driver"
            android:id="@+id/tvSignupdriver"
            android:textAlignment="center"

            android:textColor="#0E7ED8"

            android:textStyle="bold" />
    </LinearLayout>
...
